--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
 
-  <title>Frontend Mentor | Notifications page</title>
+  <title>Notifications page</title>
 
   <link rel="stylesheet" href="./styles.css">
 
